# TPX3-Functions

./: .gitignore  CMakeLists.txt  FileTypesDocumentation.txt  PossibleParticleFilters.txt  README.md
lib/: CMakeLists.txt
lib/AnalyticClassification/: CMakeLists.txt  MorphologicalClassification.cc  MorphologicalClassification.h
lib/Angles/: AngleCalulationFunctions.cc  AngleCalulationFunctions.h  CMakeLists.txt  RandomForrestTheta.cc  RandomForrestTheta.h  ReadAngles.cc  ReadAngles.h
lib/ClusterFunctions/: ClusterFeatures.cc  ClusterFeatures.h  FittingVariables.cc  FittingVariables.h  FluenceStoppingPower.cc  FluenceStoppingPower.h
lib/Deconvolution/: CMakeLists.txt  Deconvolution.cc  Deconvolution.h  ResponseConstruction.cc  ResponseConstruction.h  RooUnfoldResponseConstructorClass.cc  RooUnfoldResponseConstructorClass.h
lib/FileOperators/: CMakeLists.txt
lib/FileOperators/FileConvertion/: CMakeLists.txt  FileConvertion (copy).h  FileConvertion.cc  FileConvertion.h  MLFileConvertion.cc
lib/FileOperators/FileNames/: CMakeLists.txt  FileNames.cc  FileNames.h
lib/FileOperators/FileReaders/: CMakeLists.txt  ConfigFileReader.cc  ConfigFileReader.h  DirectoryReaders.cc  DirectoryReaders.h  ParticleFileReaderFetcher.cc  ParticleFileReaderFetcher.h  ParticleFileReaders.cc  ParticleFileReaders.h
lib/FileOperators/FileWriters/: CMakeLists.txt  FileWriterFetcher.cc  FileWriterFetcher.h  HighZSearchFileWriter.cc  HighZSearchFileWriter.h  MLFieldTrackingFileWriter.cc  MLFieldTrackingFileWriter.h  MLParticleFileWriters.cc  MLParticleFileWriters.h  MLStoppingPowerFileWriter.cc  MLStoppingPowerFileWriter.h  ParticleFileWriters.cc  ParticleFileWriters.h
lib/GeneralisedONNXModel/: CMakeLists.txt  GeneralisedONNXModel.cc  GeneralisedONNXModel.h
lib/MLClassification/: CMakeLists.txt  ElectronProtonClassifier.cc  ElectronProtonClassifier.h  MLClassification.cc  MLClassification.h  ProtonSpectroscope.cc  ProtonSpectroscope.h
lib/ParticleCluster/: CMakeLists.txt  Particle.cc  Particle.h  ParticleGeneratorBaseClass.cc  ParticleGeneratorBaseClass.h  PixelStructure.cc  PixelStructure.h
lib/ParticleFiltering/: CMakeLists.txt  FileReaderParticleFilter.h  ParticleFileReaderFilter.cc  ParticleFileReaderFilter.h  ParticleFilter.cc  ParticleFilter.h  ParticleFilterFunctionals.cc  ParticleFilterFunctionals.h  ParticleFilters.cc  ParticleFilters.h
lib/RudimentaryClassification/: CMakeLists.txt  ClusterFeatures.cc  ClusterFeatures.h
src/: AngleCalculator.cc  CMakeLists.txt  Deconvoluter.cc  FileConvertor.cc  MLTracking.cc  ResponseConstuctor.cc
